--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,9 @@
-
+<!--
 <a routerLink="/">INICIO</a> |
 <a routerLink="/auth/login">INGRESAR</a> |
 <a routerLink="/auth/registro">REGISTRO</a> |
 <a routerLink="/admin/perfil">PERFIL</a> |
+-->
+<app-menu-pagina></app-menu-pagina>
 
 <router-outlet></router-outlet>
